--- a/package.json
+++ b/package.json
@@ -12,10 +12,16 @@
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "nodemon": "^1.12.5"
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "nodemon": "^1.12.5",
+    "webpack": "^3.10.0",
+    "webpack-dev-middleware": "^1.12.2"
   },
   "dependencies": {
-    "babel-preset-env": "^1.6.1",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
   }
 }
