--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "reactRedux",
+  "name": "reactredux",
   "version": "1.0.0",
   "description": "Aula de React e Redux",
   "main": "index.js",
@@ -8,16 +8,18 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "andreseed",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "nodemon": "^1.12.5",
+    "react-hot-loader": "^3.0.0-beta.6",
     "webpack": "^3.10.0",
-    "webpack-dev-middleware": "^1.12.2"
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-hot-middleware": "^2.21.0"
   },
   "dependencies": {
     "express": "^4.16.2",
