--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Aula de React e Redux",
   "main": "index.js",
   "scripts": {
-    "server": "nodemon --watch server --exec babel-node -- server/index.js",
+    "start": "nodemon --watch server --exec babel-node -- server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -22,7 +22,9 @@
     "webpack-hot-middleware": "^2.21.0"
   },
   "dependencies": {
-    "axios": "^0.17.1",
+    "axios": "^0.12.0",
+    "body-parser": "^1.18.2",
+    "classnames": "^2.2.5",
     "express": "^4.16.2",
     "lodash": "^4.17.4",
     "prop-types": "^15.6.0",
@@ -31,6 +33,7 @@
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "validator": "^9.2.0"
   }
 }
